[gd_scene load_steps=11 format=2]

[ext_resource path="res://env_opt.tres" type="Environment" id=1]
[ext_resource path="res://camera.gd" type="Script" id=2]
[ext_resource path="res://culling_rays.gd" type="Script" id=3]
[ext_resource path="res://action_use.gd" type="Script" id=4]
[ext_resource path="res://shader_cache.gd" type="Script" id=5]
[ext_resource path="res://item_preview.gd" type="Script" id=6]
[ext_resource path="res://default_theme.tres" type="Theme" id=7]
[ext_resource path="res://sound/environment/flashlight_on.ogg" type="AudioStream" id=8]
[ext_resource path="res://sound/environment/flashlight_off.ogg" type="AudioStream" id=9]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.24, 0.36, 0.2 )

[node name="camera" type="Camera"]
environment = ExtResource( 1 )
current = true
fov = 55.0
near = 0.01
far = 23.0
script = ExtResource( 2 )

[node name="culling_rays" type="Spatial" parent="."]
editor/display_folded = true
script = ExtResource( 3 )

[node name="RayCast" type="RayCast" parent="culling_rays"]
enabled = true
cast_to = Vector3( 0, 0, -23 )
collision_mask = 2

[node name="Gun_Fire_Points" type="Spatial" parent="."]
editor/display_folded = true
transform = Transform( -1, 0, 8.74228e-008, 0, 1, 0, -8.74228e-008, 0, -1, 0, 0, -0.05 )

[node name="Rifle_Point" type="Spatial" parent="Gun_Fire_Points"]

[node name="Ray_Cast" type="RayCast" parent="Gun_Fire_Points/Rifle_Point"]
cast_to = Vector3( 0, 0, 32 )

[node name="Knife_Point" type="Spatial" parent="Gun_Fire_Points"]

[node name="InteractArea" type="Area" parent="Gun_Fire_Points/Knife_Point"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.2, 0 )
input_ray_pickable = false

[node name="Collision_Shape" type="CollisionShape" parent="Gun_Fire_Points/Knife_Point/InteractArea"]
shape = SubResource( 1 )

[node name="Use_Point" type="Spatial" parent="Gun_Fire_Points"]
script = ExtResource( 4 )

[node name="Ray_Cast" type="RayCast" parent="Gun_Fire_Points/Use_Point"]
enabled = true
cast_to = Vector3( 0, 0, 3 )

[node name="viewpoint" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.77636e-015, 0, -1 )

[node name="shader_cache" type="Spatial" parent="viewpoint"]
script = ExtResource( 5 )

[node name="item_preview" type="Spatial" parent="viewpoint"]
pause_mode = 2
script = ExtResource( 6 )

[node name="item_holder" type="Spatial" parent="viewpoint/item_preview"]

[node name="ActionsPanel" type="ColorRect" parent="viewpoint/item_preview"]
visible = false
anchor_top = 0.75
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 7 )
color = Color( 0, 0, 0, 0.141176 )

[node name="ActionsContainer" type="VBoxContainer" parent="viewpoint/item_preview/ActionsPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="HintLabelClose" type="Label" parent="viewpoint/item_preview/ActionsPanel/ActionsContainer"]
margin_right = 1920.0
margin_bottom = 32.0
text = "Q -- закрыть"
align = 1
valign = 1

[node name="CustomActions" type="VBoxContainer" parent="viewpoint/item_preview/ActionsPanel/ActionsContainer"]
margin_top = 36.0
margin_right = 1920.0
margin_bottom = 270.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Flashlight" type="SpotLight" parent="."]
transform = Transform( -1, 8.74228e-008, 0, -8.74228e-008, -1, 0, 0, 0, 1, 0, 0, -0.3 )
visible = false
light_color = Color( 1, 0.913725, 0.768627, 1 )
light_energy = 0.4
shadow_color = Color( 0.639216, 0.639216, 0.639216, 1 )
shadow_bias = 0.3
spot_range = 18.0
spot_attenuation = 1.7411
spot_angle = 42.0
spot_angle_attenuation = 2.07053

[node name="AudioStreamFlashlightOn" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
bus = "Sound"

[node name="AudioStreamFlashlightOff" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
bus = "Sound"
